Combination is better than inheritance